fix permanently visible scrollbar in chrome browser

--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -96,7 +96,7 @@ div.startpage {
         padding: 2dvh 0;
         margin: 0;
         font-size: 1rem;
-        overflow:scroll;
+        overflow: auto;
 
         >li {
           >a {
